Value based math system! (broke dynamic object rendering however)